Mon Jun 16 14:33:56 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (open): use UTF-8 version function to support
	  non-ascii path properly.  [ruby-core:63185] [Bug #9946]

Sat Jun 14 10:54:08 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rcombinate0): remove recursion, by looping with indexes
	  stored in `p`.

	* array.c (rpermute0): remove recursion, by looping with indexes
	  stored in `p`.

	* array.c (permute0): remove recursion, by looping with indexes
	  stored in `p`.  [ruby-core:63103] [Bug #9932]

Sat Jun 14 10:52:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_resize): update capa only when buffer get
	  reallocated.
	  http://d.hatena.ne.jp/nagachika/20140613/ruby_trunk_changes_46413_46420#r46413

Sat Jun 14 08:28:59 2014  Zachary Scott  <e@zzak.io>

	* man/rake.1: [DOC] Update links for Rake, patch by @hsbt [Bug #9904]
	  [Fixes GH-628] https://github.com/ruby/ruby/pull/628

Fri Jun 13 17:58:58 2014  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c: add new method TracePoint.stat to debug
	  TracePoint mechanism.

	  Ruby users should not use this method. So I don't note this method
	  in the NEWS file.

	* test/runner.rb: detect zombie active TracePoints with
	  TracePoint.stat.

Fri Jun 13 17:46:31 2014  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c: clear and restore recursive checking thread local data
	  to avoid unexpected throw from TracePoint.
	  [Bug #9940]

	* test/ruby/test_settracefunc.rb: add a test.

	* thread.c: added
	  * rb_threadptr_reset_recursive_data(rb_thread_t *th);
	  * rb_threadptr_restore_recursive_data(rb_thread_t *th, VALUE old);

	* vm_core.h: ditto.

Fri Jun 13 17:33:14 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_combination): iterate on a shared copy, and use
	  array of indexes instead of array of chosen objects.
	  [ruby-core:63149] [Bug #9939]

	* array.c (yield_indexed_values): extract from permute0(),
	  rpermute0(), and rcombinate0().
