@@ -1,3 +1,8 @@
+Mon Jun 16 18:42:57 2014  Koichi Sasada  <ko1@atdot.net>
+
+	* test/runner.rb: capture TracePoint stat before setup and compare
+	  it after teardown.
+
 Mon Jun 16 14:33:56 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* process.c (open): use UTF-8 version function to support
